// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip[Base] should render correctly  1`] = `
<div>
  <noscript />
  <button
    class="cmi4mna soui-button-primary c-hb33si soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      hover me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly about click 1`] = `
<div>
  <noscript />
  <button
    class="cmi4mna soui-button-primary c-hb33si soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      click me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly about disabled 1`] = `
<div>
  <noscript />
  <span
    class="c-vxs7ti soui-tooltip-target"
    style="cursor: not-allowed;"
  >
    <button
      class="c-ljqh2g soui-button-secondary c-hb33si soui-button-button cb3gac8 soui-button-disabled"
      dir="ltr"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Disabled
      </span>
    </button>
  </span>
</div>
`;
